# markdown-app

./: .gitignore  Cargo.toml  README.md
markdown_api/: Cargo.toml  Rocket.toml
markdown_api/src/: cors.rs  database.rs  endpoints.rs  main.rs  model.rs
markdown_gui/: Cargo.toml
markdown_web/: Cargo.toml
