[package]
name = "markdown_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
serde = {version = "1.0.166", features= ["derive"]}
serde_json = "1.0.99"
surrealdb = "1.0.0-beta.9"
tokio = "1.29.1"
